--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -32,10 +32,19 @@
             <div class="seach_add_feild">
                 <div class="title">Traits</div>
                 <div class="d-flex align-items-center">
-                    <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
+                    <!-- <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
                         <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="fieldSearchId" [(ngModel)]="serachTraits">           
-                    </div> 
-                    <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Search</div>
+                    </div>  -->
+                    <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
+                        <input type="text" placeholder="Search" class="input-search" (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!serachTraits}" autocomplete="off" [(ngModel)]="serachTraits" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                            (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+                        <img [src]="searchImgSrc" class="search-icon" *ngIf="!serachTraits">
+                        <img class="close-icon" *ngIf="serachTraits" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':serachTraits}" (click)="serachTraits='';toggleSearch(false)">
+                    </div>
+                    <div class="seach-block" >
+                        <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch()"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
+                    </div>
+                    <!-- <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Search</div> -->
                     <div class="add_feild" (click)="createNewTraits()"><img src="assets/icons/add_plus.svg"> Add Traits</div>
                     <!-- <button class="kr-sg-button-primary btn_lg" (click)="trainIndex()">Train Index</button> -->
                 </div>
@@ -111,14 +120,16 @@
                     <div class="col-4 group-name" title="{{item.key}}"> {{item.key}}</div>
                     <div class="col-6 m-0 align-items-center">
                         <div class="utterances-count" *ngIf="item.data.length">{{item.data.length}} Utterances</div>
-                        <div class="add-utt-title" *ngIf="!item.data.length" (click)="openAddUtteranceModel(index,item.key)">
+                        <div class="add-utt-title" *ngIf="!item.data.length" (click)="openAddUtteranceModel(index,item.key,item.data)">
                             <img src="assets/icons/add_blue.svg">Add utterances
                         </div> 
                     </div>
                     <div class="col-2 action-btns pr-1">
-                        <img src="assets/icons/add_blue.svg" (click)="openAddUtteranceModel(index,item.key)" placement="top-center" container='body' ngbTooltip="Add Utterance" tooltipClass="ngb_tooltip_custom_class sampleJson">                      
-                        <img src="assets/icons/edit-pencil.svg" id="btn_edit_traits" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
-                        <img src="assets/icons/delete-table.svg" (click)="deleteTraitInGroup(item.key,traits.addEditTraits,$event,index)" id="btn_delete_traits" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                        <ng-container *ngIf="item.data.length">
+                            <img src="assets/icons/add_blue.svg" (click)="openAddUtteranceModel(index,item.key,item.data)" placement="top-center" container='body' ngbTooltip="Add Utterance" tooltipClass="ngb_tooltip_custom_class sampleJson">                      
+                            <img src="assets/icons/edit-pencil.svg" id="btn_edit_traits" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                            <img src="assets/icons/delete-table.svg" (click)="deleteTraitInGroup(item.key,traits.addEditTraits,$event,index)" id="btn_delete_traits" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                        </ng-container>
                     </div> 
                 </div>                    
             </ng-container>
@@ -132,31 +143,36 @@
 
 <kr-modal modalType="center" #addUtteranceModalPop modalClass="modal_popups_ add-utterances-modal">
     <div class="modal-header">
-        <div class="title">Berth Type <img src="assets/icons/carrotright.svg"> Lower <img src="assets/icons/carrotright.svg"> Utterance</div>
+        <div class="title">{{traits.addEditTraits.groupName}} <img src="assets/icons/carrotright.svg"> {{currentTraitKey}} <img src="assets/icons/carrotright.svg"> Utterance</div>
         <div class="close_icon" (click)='closeUtteranceModal()'><img src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
         <div class="modal-body">
-            <div class="kr-sg-input-text add-traits-input">
-                <input  maxlength="2048" type="text" autocomplete="off" placeholder="Type and Enter to Add Utterances" class="input-text" (keyup)='addUtterance(newUtterance,currentTraitKey,$event,traits.addEditTraits,currentUtteranceIndex)' [(ngModel)]='newUtterance' name='traitName'>
-            </div>
+            <ng-container >
+                <div class="content-body-traits row col-12" *ngFor="let utterance of utteranceList;let i = index;" [ngClass]="{'py-0':(showEditUtteranceInput == i)}">
+                    <div class="kr-sg-input-text add-traits-input" *ngIf="showEditUtteranceInput == i">
+                        <input autocomplete="off" maxlength="2048" type="text" placeholder="Type and Enter to Add Utterances" class="input-text pl-3 shadow-none" (keyup)='editUtter($event,utterance)' [(ngModel)]='utterance' name='utteranceName'>
+                        <img class="close-icon" *ngIf="utterance" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':utterance}" (click)="utterance='';">
+                    </div>
 
-            <ng-container>
-                <div class="content-body-traits row col-12">
-                    <div class="col-10 group-name">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>                   
-                    <div class="col-2 action-btns pr-1">                        
-                        <img src="assets/icons/edit-pencil.svg" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson">
-                        <img src="assets/icons/delete-table.svg" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                    <div class="col-10 group-name" *ngIf="showEditUtteranceInput !== i">{{utterance}}</div>  
+                    <div class="col-2 action-btns pr-1"  *ngIf="showEditUtteranceInput !== i">                        
+                        <img src="assets/icons/edit-pencil.svg" placement="top-center" container='body' ngbTooltip="Edit" tooltipClass="ngb_tooltip_custom_class sampleJson" (click)="showEditUtteranceInput = i;showUtteranceInput = false;">
+                        <img src="assets/icons/delete-table.svg" placement="top-center" container='body' ngbTooltip="Delete" tooltipClass="ngb_tooltip_custom_class sampleJson" (click)="deleteUtterance(utterance,$event)">
                     </div> 
                 </div> 
-                <div class="add-utt-title">
-                    <img src="assets/icons/add_blue.svg">Add utterances
+                <div class="add-utt-title" *ngIf="!showUtteranceInput  && !showEditUtteranceInput && showEditUtteranceInput !== 0" (click)="showUtteranceInput = true;">
+                    <img src="assets/icons/add_blue.svg" >Add utterances
                 </div>                  
             </ng-container>
+            <div class="kr-sg-input-text add-traits-input" *ngIf="showUtteranceInput">
+                <input  maxlength="2048" type="text" autocomplete="off" placeholder="Type and Enter to Add Utterances" class="input-text" (keyup)='addNewUtter(newUtterance,$event)' [(ngModel)]='newUtterance' name='utteranceName'>
+                <img class="close-icon" *ngIf="newUtterance" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':newUtterance}" (click)="newUtterance='';">
+            </div>
         </div>
     </perfect-scrollbar>
     <div class="modal-footer">
-        <button class="kr-sg-button-primary btn_lg" [disabled]="!newUtterance" (click)="addNewUtterance(newUtterance)">Add</button>
+        <button class="kr-sg-button-primary btn_lg" [disabled]="!utteranceList.length" (click)="addNewUtterance(currentTraitKey,traits.addEditTraits,currentUtteranceIndex)">Add</button>
         <button class="kr-sg-button-secondary btn_lg"  (click)="closeUtteranceModal()">Cancel</button>
     </div>
 </kr-modal> 
