--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -340,7 +340,7 @@
 				<span class="linkTitle">Team Management</span>
 			</div>
 
-			<div class="inside-menu-title">BILLING & USAGE</div>
+			<!-- <div class="inside-menu-title">BILLING & USAGE</div>
 			<div mat-button class="mat-button" [routerLink]="['/pricing']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
 				<span class="inlineIconBox leftAdjust">
 					<img src="assets/icons/sidemenu/new-icons/plandetails.svg" class="defaultIcon">
@@ -361,7 +361,7 @@
 					<img src="assets/icons/sidemenu/new-icons/invoice.svg" class="activeIcon">
 				</span>
 				<span class="linkTitle">Invoices</span>
-			</div>
+			</div> -->
 
 		</div>
 
