--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -234,16 +234,16 @@
       </div>
       
       <ng-container>
-        <div class="upgrade-experience d-none">
+        <div class="upgrade-experience" [ngClass]='{"d-none":currentSubscriptionPlan.planName!="Free"}'>
           <div class="img-block">
             <img src="assets/icons/pricing/upgrade-experience.svg">
           </div>
           <div class="title">Oops!! Experiements is not available in your current Plan</div>
-          <button class="kr-sg-button-primary btn_lg">Upgrade</button>
+          <button class="kr-sg-button-primary btn_lg" (click)="upgrade()">Upgrade</button>
         </div>
       </ng-container>
 
-      <ng-container *ngIf="filterExperiments.length===0">        
+      <ng-container *ngIf="filterExperiments.length===0 && currentSubscriptionPlan.planName!='Free'">        
         <div  class="empty-landing-screen" >
           <div class="img-block"><img class="action_icon" src="assets/images/experiments-empty.svg" (load)="imageLoaded()"></div>
           <ng-container *ngIf="loadImageText">
@@ -407,3 +407,6 @@
     </button>
   </div>
 </kr-modal>
+
+<!-- upgrade plan component-->
+<app-upgrade-plan #plans></app-upgrade-plan>
