--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -73,14 +73,13 @@
           </div> -->
         </div>
 
-        <div class="choose-plan-data-table if-standard" *ngFor="let plan of filterPlansData">
+        <div class="choose-plan-data-table if-standard">
          <!-- if-free, if-standard, if-pro, if-enterprise   add this classes based on type selected--> 
-         <ng-container>
          <div class="header-table-plan row m-0">
             <div class="type-title width-24">
               
             </div>
-            <div class="type-title width-19">
+            <div class="type-title width-19" *ngFor="let plan of filterPlansData">
               <div class="title">{{plan.name}}</div>  
               <div class="plan-duration" *ngIf="selectedPlan" [ngClass]='{"d-none":selectedPlan.planName===plan.name||plan.name=="Enterprise"}'>${{plan.planAmount}} <span>/ {{termPlan==='Monthly'?'month':'year'}}</span></div>
               <div class="plan-duration" [ngClass]='{"d-none":plan.name!="Enterprise"}'>Custom Pricing</div>
@@ -89,7 +88,7 @@
           </div>
 
           <div class="body-content-plan">
-            <div class="body-table-plan row" *ngFor="let feature of plan.featureData">
+            <div class="body-table-plan row" *ngFor="let feature of filterPlansData">
               <div class="title width-24 pl-4">{{feature.name}} <img src="assets/icons/pricing/info.svg"></div>
               <div class="title width-19">{{feature.limit==Undefined?"-":feature.limit}}</div>
             </div>
@@ -135,7 +134,6 @@
               <div class="title width-19">Dedicated POC, Custom SLA</div>
             </div> -->
         </div>
-      </ng-container>
         </div>
       </div>
     </perfect-scrollbar>
