--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -15,20 +15,20 @@
                   <div class="dropdown dropdown-open">
                       <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><img src="assets/icons/pricing/overflow.svg"></button>                                            
                       <ul class="dropdown-menu content-menu">                                                                    
-                        <li (click)="addOverage()"><a>Add Overage</a></li>
+                        <li (click)="addOverage()" [attr.disabled] = "currentSubscriptionPlan.subscription.planName == 'Free' ? true : null"><a>Add Overage</a></li>
                         <li (click)="compare('choosePlans',currentSubscriptionPlan.subscription)"><a>Change Plan</a></li>
-                        <li (click)="openPopup5()"><a>Cancel Subscription</a></li>
+                        <li (click)="openPopup5()" [attr.disabled] = "currentSubscriptionPlan.subscription.planName == 'Free' ? true : null"><a>Cancel Subscription</a></li>
                       </ul>
                     </div>
                 </div>
                 <div class="plan-details">
                   <div class="type-plan-sec">
                     <div class="type-plan">{{ currentSubscriptionPlan.subscription.planName || 'Free' }} </div>
-                    <div class="amount" *ngIf="currentSubscriptionPlan.subscription.planName != 'Free'">$399 <span>/ month</span></div>
+                    <div class="amount" *ngIf="currentSubscriptionPlan.subscription.planName != 'Free'">${{currentSubscriptionPlan.subscription.planAmount}}<span>/ month</span></div>
                   </div>
                   <div class="plan-time">
                     <div class="started-title">Started On</div>
-                    <div class="started-date">{{ currentSubscriptionPlan.subscription.planName.createdAt | date: 'DD/MON/YYYY' || '18 April 2021'}}</div>
+                    <div class="started-date">{{ currentSubscriptionPlan.subscription.planName.createdAt | date: 'DD/MMM/YYYY' || '18 April 2021'}}</div>
                   </div>
                 </div>
               </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="upgrade-details-prices row col-12">
+        <div class="upgrade-details-prices row col-12" *ngIf ="currentSubscriptionPlan.subscription.planName =='Free'">
           <div class="row col-12 upgrade-header-sec">
             <div class="title col-5 p-0">Upgrade to</div>
             <div class="upgrader-btn-sec col-7 p-0">
@@ -230,9 +230,9 @@
         <div class="overage_card">
           <div class="titles-sec">
             <div class="title">Documents</div>
-            <div class="price">$25 <span>/ month</span></div>
+            <div class="price">${{overageDeatils.ingestDocs.amount}} <span>/ month</span></div>
           </div>
-          <div class="info-card-overage">Add <span>Additional 10k</span> documents to your plan</div>
+          <div class="info-card-overage">Add <span>Additional {{overageDeatils.ingestDocs.limit}}</span> documents to your plan</div>
           <div class="btn_add_doc text-right">
             <button class="kr-sg-button-secondary btn_lg" [ngClass] = "{'d-none': addDocOver}" (click) = "addDocument()">Add Documents </button>
             <div class="add-doc-block" [ngClass] = "{'d-none': !addDocOver}">
@@ -245,9 +245,9 @@
         <div class="overage_card">
           <div class="titles-sec">
             <div class="title">Queries</div>
-            <div class="price">$99 <span>/ month</span></div>
+            <div class="price">${{overageDeatils.searchQueries.amount}} <span>/ month</span></div>
           </div>
-          <div class="info-card-overage">Add <span>Additional 50k</span> queries to your plan</div>
+          <div class="info-card-overage">Add <span>Additional {{overageDeatils.searchQueries.limit}}</span> queries to your plan</div>
           <div class="btn_add_doc text-right">
             <button class="kr-sg-button-secondary btn_lg" [ngClass] = "{'d-none': addQueOver}" (click) = "addQuerry()">Add Queries</button>
             <div class="add-doc-block" [ngClass] = "{'d-none': !addQueOver}">
@@ -262,7 +262,7 @@
       <div class="change-plan-container">
         <button class="kr-sg-button-secondary btn_lg" (click)="compare('choosePlans',currentSubscriptionPlan.subscription)">Change Plan</button>
         <div class="info-text">You can also choose to <span>Upgrade your Plan</span> </div>
-        <div class="info-text">Upgrade to <u>Pro</u> to get <span>50k documents</span> and <span>100k Queries</span> per month.</div>
+        <div class="info-text" *ngIf="currentSubscriptionPlan.subscription.planId == plansIdList.standardMonth">Upgrade to <u>Pro</u> to get <span>50k documents</span> and <span>100k Queries</span> per month.</div>
         <div class="info-text">Upgrade to <u>Enterprise</u> to get <span>custom</span> no. of documents and queries per month.  </div>
       </div>
     </div>
