--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -2,13 +2,14 @@
     <div class="header-sec">
         <div class="title">Usage Log</div>
         <div class="d-flex align-items-center">
-            <div class="kr-sg-input-search">
-                <input type="text" placeholder="Search" class="input-search" autocomplete="off">
-                <!-- <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchInvoice">
-                <img class="close-icon" *ngIf="searchInvoice" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchInvoice}" (click)="searchInvoice='';toggleSearch(false)">              -->
+            <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
+                <input type="text" placeholder="Search" class="input-search"  (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!searchUsageLog}" autocomplete="off" [(ngModel)]="searchUsageLog" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+                <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchUsageLog">
+                <img class="close-icon" *ngIf="searchUsageLog" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchUsageLog}" (click)="searchUsageLog='';toggleSearch()">
             </div>           
             <div class="seach-block">
-                <span class="mr-3" (click)="toggleSearch(true)"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
+                <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch()"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
             </div> 
             <div class="download-icon" tooltipClass="tooltip_custom margin-10" placement="bottom-right" container='body' ngbTooltip="Download Log">
                 <img src="assets/icons/usage-log/download.svg">
