--- a/findly-builder/src/app/components/actions/actions.component.html
+++ b/findly-builder/src/app/components/actions/actions.component.html
@@ -17,13 +17,15 @@
                     <div class="info-desc">The Bot results will be positioned at the bottom in the chat and Full page result view</div>
                 </div> 
             </div> 
-            <div class="info-link-bot-notification" *ngIf="!botLinked">
+            <div *ngIf="loadingBotContent">
+            <div class="info-link-bot-notification" *ngIf="!botLinked ">
                 <img src="assets/icons/actions/info.svg">
                 <div class="title-text">You need to Link Bot to Customize Actions</div>
                 <div class="link-bot-link" (click)="openActions()">Link a Bot</div>
             </div>
-
-            <div class="preview-bolock" *ngIf="botLinked" >
+        </div>
+        <div *ngIf="loadingBotContent1">
+            <div class="preview-bolock" *ngIf="botLinked " >
                 <div class="preview-heading">Preview</div>
                 <div class="display-preview-img" *ngIf="bottomActionsTop" >
                     <img src="assets/icons/actions/bottom-up-preview.svg">
@@ -37,6 +39,7 @@
                 <div class="display-preview-img"  *ngIf="topActionsTop">
                     <img src="assets/icons/actions/actions-top-1.svg">
                 </div>
+            </div>
             </div>
         </div>
     </perfect-scrollbar>
