--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -158,19 +158,30 @@
             </div>
           </header> -->
           <header class="table-header">
-            <div class="col-8 title-header"><img src="assets/icons/sort_up_down.svg">{{'synonyms.terms'| translate}}
+            <div class="col-8 title-header">
+              <span class="d-flex align-items-center flex-column mr-1" (click)="sortBy('name')">
+                <img [ngClass]="getSortIconVisibility('name', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                <img  [ngClass]="getSortIconVisibility('name', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+              <!-- <img src="assets/icons/sort_up_down.svg"> --></span>
+              {{'synonyms.terms'| translate}}
             </div>
-            <div class="col-4 title-header"><img src="assets/icons/sort_up_down.svg">{{'synonyms.type'| translate}}
+            <div class="col-4 title-header">
+              <span class="d-flex align-items-center flex-column mr-1" (click)="sortBy('type')">
+                <img  [ngClass]="getSortIconVisibility('type', 'down')"src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                <img  [ngClass]="getSortIconVisibility('type', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+          </span>
+              <!-- <img src="assets/icons/sort_up_down.svg"> -->
+              {{'synonyms.type'| translate}}
               <span class="kr-sg-dropdowns" #t='ngbDropdown' ngbDropdown [placement]="'bottom-center'">
                 <div class="dropdown dropdown-open">
                   <img src="assets/icons/synonyms_sort_dropdown.svg" ngbDropdownToggle>
                   <ul class="dropdown-menu content-menu synonyms_sort_dropdown" ngbDropdownMenu>
                     <li (click)="selectFilter(null);t.close();">{{'synonyms.All' | translate}}<img
                         *ngIf="!(selectedFilter)"  class="pl-2" src="assets/icons/check-blue.svg"></li>
-                    <li (click)="selectFilter('oneWaySynonym');t.close();" *ngIf="showoneWaySynonym">
+                    <li (click)="selectFilter('oneWaySynonym');t.close();" *ngIf="filteroneWaySynonym">
                       {{'synonyms.one_way_synonym' | translate}}<img class="pl-2"
                         *ngIf="(selectedFilter === 'oneWaySynonym')" src="assets/icons/check-blue.svg"></li>
-                    <li *ngIf="showSynonym" (click)="selectFilter('synonym');t.close();">{{'synonyms.synonym'| translate}}<img class="pl-2"
+                    <li *ngIf="filterSynonym" (click)="selectFilter('synonym');t.close();">{{'synonyms.synonym'| translate}}<img class="pl-2"
                         *ngIf="(selectedFilter === 'synonym')" src="assets/icons/check-blue.svg"></li>
                   </ul>
                 </div>
